crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_unresolved_collapsed_reference_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..14
  PARAGRAPH@0..14
    UNRESOLVED_REFERENCE@0..13
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..10
        TEXT@1..10 "link text"
      TEXT@10..11 "]"
      TEXT@11..12 "["
      LINK_REF@12..12
      TEXT@12..13 "]"
    NEWLINE@13..14 "\n"
