crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_wikilinks_both_enabled.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..93
  PARAGRAPH@0..59
    TEXT@0..48 "Both extensions enabl ..."
    INLINE_CODE@48..57
      INLINE_CODE_MARKER@48..49 "`"
      INLINE_CODE_CONTENT@49..56 "[[a|b]]"
      INLINE_CODE_MARKER@56..57 "`"
    TEXT@57..58 ":"
    NEWLINE@58..59 "\n"
  BLANK_LINE@59..60
    BLANK_LINE@59..60 "\n"
  PARAGRAPH@60..68
    WIKI_LINK@60..67
      WIKI_LINK_OPEN@60..62 "[["
      WIKI_LINK_URL@62..63
        TEXT@62..63 "a"
      WIKI_LINK_PIPE@63..64 "|"
      WIKI_LINK_TITLE@64..65
        TEXT@64..65 "b"
      WIKI_LINK_CLOSE@65..67 "]]"
    NEWLINE@67..68 "\n"
  BLANK_LINE@68..69
    BLANK_LINE@68..69 "\n"
  PARAGRAPH@69..93
    WIKI_LINK@69..92
      WIKI_LINK_OPEN@69..71 "[["
      WIKI_LINK_URL@71..90
        TEXT@71..90 "https://example.org"
      WIKI_LINK_CLOSE@90..92 "]]"
    NEWLINE@92..93 "\n"
